# Z-Color-Picker

./: .gitignore  Cargo.toml  README.md  render.ppm
presets/: Cool Pink.json  Curved.json
presets - Copy/: Pink.json  Turquoise.json  Yellow.json
src/: app.rs  bezier.rs  bezier_homemade copy.rs  bezier_homemade.rs  clipboard.rs  color_picker.rs  common.rs  content_windows.rs  control_point.rs  curves.rs  datatypes.rs  debug_windows.rs  error.rs  fs.rs  gradient.rs  hsv_key_value.rs  image_processing.rs  logger.rs  main.rs  math.rs  panes.rs  preset.rs  previewer.rs  ui_common.rs  ui_egui.rs
src/datatypes/: control_point.rs  hsv_key_value.rs
src/ui_egui/: app.rs  clipboard.rs  color_picker.rs  content_windows.rs  control_points.rs  curves.rs  debug_windows.rs  gradient.rs  panes.rs  previewer.rs  tangents.rs  ui_common.rs
