[package]
name = "Z-Color-Picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bspline = "1.1.0"
ecolor = {version = "0.22.0", features = ["color-hex"]}
eframe = {version = "0.22.0"}
env_logger = "0.10"
num-integer = "0.1.45"
palette = "0.7.4"
splines = "4.3.1"
