[package]
name = "z_color_picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bspline = "1.1.0"
ecolor = {version = "0.22.0", features = ["color-hex"]}
eframe = {version = "0.22.0"}
env_logger = "0.10"
num-integer = "0.1.45"
palette = "0.7.4"
splines = "4.3.1"
serde = { version = "1.0.48", features = ["derive"] }
serde_json = "1.0.48"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["winnt", "winuser"] }